tests/ui/async-await/return-type-notation/super-method-bound-ambig.stderr
error[E0221]: ambiguous associated function `test` in bounds of `Foo`
  --> $DIR/super-method-bound-ambig.rs:24:12
   |
LL |     async fn test();
   |     ---------------- ambiguous `test` from `for<'a> Super1<'a>`
...
LL |     async fn test();
   |     ---------------- ambiguous `test` from `Super2`
...
LL |     T: Foo<test(..): Send>,
   |            ^^^^^^^^^^^^^^ ambiguous associated function `test`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0221`.
